frontend-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sandyxd18/frontend-tubes:v5
        ports:
        - containerPort: 5050
        # env:
        #   - name: VITE_BASE_URL
        #     valueFrom:
        #       secretKeyRef:
        #         name: frontend-secret
        #         key: VITE_BASE_URL
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5050
